--- a/templates/portal_list.html
+++ b/templates/portal_list.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="flex w-screen xl:w-[90%] h-auto flex-col mt-28 mx-auto items-center">
-  <h1 class="text-white font-font font-bold text-6xl mb-20">PORTALS</h1>
+  <h1 class=" font-font font-bold text-6xl mb-20">PORTALS</h1>
   <div class="w-full h-full flex flex-row  flex-wrap items-center justify-center">
     {% for portal in portals %}
     <div class="w-[75vw] lg:w-[28%] m-8 p-4 border border-gray-500 rounded-2xl">
@@ -27,12 +27,12 @@
             alt="Default banner"
           />
           {% endif %}
-          <span class="text-white text-2xl font-black">{{ portal.name }}</span>
+          <span class=" text-2xl font-black">{{ portal.name }}</span>
         </div>
         <hr class="border-gray-500" />
       </a>
       <div class="m-2">
-        <span class="text-white">{{ portal.description }}</span>
+        <span class="">{{ portal.description }}</span>
       </div>
       <hr class="border-gray-500" />
       <div class="my-4 m-2 flex gap-2">
