--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
   </div>
 
   <!-- Featured Stats Section -->
-  <div class="w-full py-16 bg-gray-900 text-white text-center max-w-[1200px] mx-auto">
+  <div class="w-full py-8 px-8 rounded-lg my-16 bg-gray-900 text-white text-center max-w-[1200px] mx-auto">
     <h2 class="text-3xl font-bold mb-8">Our Impact</h2>
     <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-4 gap-4 lg:gap-8">
       <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
