--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
-      href="{% static 'img/ITClogoWhite.png' %}"
+      href="{% static 'img/logo.jpeg' %}"
       type="image/png"
     />
 
